--- a/Objects/stm32g431_pure_sine_wave_inverter.build_log.htm
+++ b/Objects/stm32g431_pure_sine_wave_inverter.build_log.htm
@@ -8,7 +8,7 @@ Copyright (C) 2024 ARM Ltd and ARM Germany GmbH. All rights reserved.
 License Information: faridul islam
 NA
 User-based license: Keil MDK Community (non-commercial free of charge)
-Valid until: Jun 1 2033. Cached until: Dec 31 2025
+Valid until: Jun 1 2033. Cached until: Jan 3 2026
  
 Tool Versions:
 Toolchain:       Keil MDK Community (non-commercial free of charge  Version: 5.41.0.0
@@ -20,7 +20,7 @@ Library Manager: ArmAr.exe V6.22
 Hex Converter:   FromElf.exe V6.22
 CPU DLL:         SARMCM3.DLL V5.41.0.0
 Dialog DLL:      DCM.DLL V1.17.5.0
-Target DLL:      UL2CM3.DLL V1.164.14.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.3.0.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
@@ -31,11 +31,11 @@ Project File Date:  12/27/2025
 *** Using Compiler 'V6.22', folder: 'C:\Keil\ARM\ARMCLANG\Bin'
 Rebuild target 'STM32G431CBU'
 assembling startup_stm32g431xx.s...
-compiling main.c...
 compiling system_stm32g4xx.c...
+compiling main.c...
 compiling spwm.c...
 linking...
-Program Size: Code=420 RO-data=488 RW-data=0 ZI-data=1632  
+Program Size: Code=3072 RO-data=520 RW-data=0 ZI-data=2368  
 ".\Objects\stm32g431_pure_sine_wave_inverter.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
