Added: wdt functions

--- a/Objects/stm32g431_pure_sine_wave_inverter.build_log.htm
+++ b/Objects/stm32g431_pure_sine_wave_inverter.build_log.htm
@@ -3,61 +3,59 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.41.0.0
-Copyright (C) 2024 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: faridul islam
-NA
-User-based license: Keil MDK Community (non-commercial free of charge)
-Valid until: Jun 1 2033. Cached until: Jan 3 2026
+IDE-Version: µVision V5.36.0.0
+Copyright (C) 2021 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information: Faridul Islam, NA, LIC=----
  
 Tool Versions:
-Toolchain:       Keil MDK Community (non-commercial free of charge  Version: 5.41.0.0
-Toolchain Path:  C:\Keil\ARM\ARMCLANG\Bin
-C Compiler:      ArmClang.exe V6.22
-Assembler:       Armasm.exe V6.22
-Linker/Locator:  ArmLink.exe V6.22
-Library Manager: ArmAr.exe V6.22
-Hex Converter:   FromElf.exe V6.22
-CPU DLL:         SARMCM3.DLL V5.41.0.0
-Dialog DLL:      DCM.DLL V1.17.5.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.3.0.0
-Dialog DLL:      TCM.DLL V1.56.4.0
+Toolchain:       MDK-Lite  Version: 5.36.0.0
+Toolchain Path:  C:\Keil_v5\ARM\ARMCLANG\Bin
+C Compiler:      ArmClang.exe V6.16
+Assembler:       Armasm.exe V6.16
+Linker/Locator:  ArmLink.exe V6.16
+Library Manager: ArmAr.exe V6.16
+Hex Converter:   FromElf.exe V6.16
+CPU DLL:         SARMCM3.DLL V5.36.0.0
+Dialog DLL:      DCM.DLL V1.17.3.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
+Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-E:\Embedded Projects\Running\Keil Projects\STM32G431_Pure_Sine_Wave_Inverter\stm32g431_pure_sine_wave_inverter.uvprojx
-Project File Date:  12/27/2025
+D:\Projects\Embedded Projects\Personal\Keil\STM32G431_Pure_Sine_Wave_Inverter\stm32g431_pure_sine_wave_inverter.uvprojx
+Project File Date:  12/29/2025
 
 <h2>Output:</h2>
-*** Using Compiler 'V6.22', folder: 'C:\Keil\ARM\ARMCLANG\Bin'
+*** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'STM32G431CBU'
+compiling main.c...
 assembling startup_stm32g431xx.s...
 compiling system_stm32g4xx.c...
-compiling main.c...
+compiling wdt.c...
 compiling spwm.c...
 linking...
-Program Size: Code=3584 RO-data=520 RW-data=0 ZI-data=2576  
+Program Size: Code=3820 RO-data=520 RW-data=0 ZI-data=2576  
 ".\Objects\stm32g431_pure_sine_wave_inverter.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                https://www.keil.com/pack/ARM.CMSIS.6.2.0.pack
-                ARM::CMSIS@6.2.0
+                https://www.keil.com/pack/ARM.CMSIS.6.1.0.pack
+                ARM.CMSIS.6.1.0
                 CMSIS (Common Microcontroller Software Interface Standard)
-   * Component: CORE Version: 6.1.1
+   * Component: CORE Version: 6.1.0
 
 Package Vendor: Keil
                 https://www.keil.com/pack/Keil.STM32G4xx_DFP.2.1.0.pack
-                Keil::STM32G4xx_DFP@2.1.0
+                Keil.STM32G4xx_DFP.2.1.0
                 STMicroelectronics STM32G4 Series Device Support
 
 <h2>Collection of Component include folders:</h2>
-  ./RTE/_STM32G431CBU
-  C:/Keil/ARM/CMSIS/6.2.0/CMSIS/Core/Include
+  .\RTE\_STM32G431CBU
+  C:\Users\farid\AppData\Local\Arm\Packs\ARM\CMSIS\6.1.0\CMSIS\Core\Include
 
 <h2>Collection of Component Files used:</h2>
 
-   * Component: ARM::CMSIS:CORE@6.1.1
+   * Component: ARM::CMSIS:CORE:6.1.0
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
